# DSP2_Sign_Detection

./: .gitignore  CMakeLists.txt  README.md  run.sh
include/: imageprocessing.hpp  messagequeue.hpp
src/: imageprocessing.cpp  main.cpp  messagequeue.cpp
